# awesomecalculatorKMT

./: awesomecalculatorKMT.pypirc
src/: __init__.py  pyproject.toml  setup.py
src/dedreira_awesomecalculator.egg-info/: PKG-INFO
