[project]
name = "awesomecalculatorKMT"
version = "0.0.1"
authors = [
  { name="ktargosz", email="ktargosz8785@conestogac.on.ca" },
]
description = "An awesome calculator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ktargosz/awesomecalculatorKMT"